tests/testcases/invalid/04_invalid_char_literal.ciel
int main() {
    char c = 'AB'; // too many characters in char literal
    return 0;
}
